llvm/test/CodeGen/MIR/AMDGPU/s_wait_alu-error-bad-counter-name.mir
# RUN: not llc -mtriple=amdgcn -mcpu=gfx1200 -run-pass=none %s -o - 2>&1 | FileCheck %s

---
# CHECK: error: {{.*}} bad counter name
name: BadCounterName
body: |
  bb.0:
    S_WAITCNT_DEPCTR .BadCounterName_1
...
